--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf lib/*",
     "test": "jest",
     "type-check": "tsc",
-    "": "tsc -p tsconfig.types-gen.json",
+    "build:types": "tsc -p tsconfig.types-gen.json",
     "prepublish": "npm run build && npm version patch",
     "type-check:watch": "npm run type-check -- --watch",
     "compile": "babel src --out-dir lib --extensions .ts",
