--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib/*",
+    "lint:fix": "eslint src/ --ext .tsx,.ts,.js --fix",
     "test": "jest",
     "type-check": "tsc",
     "build:types": "tsc -p tsconfig.types-gen.json",
@@ -29,7 +30,6 @@
     "url": "https://github.com/dudiharush/fetch-tx.git"
   },
   "devDependencies": {
-    "@types/node": "^12.12.11",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
@@ -40,14 +40,34 @@
     "@babel/preset-typescript": "^7.7.2",
     "@types/jest": "^24.0.23",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.11",
     "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "babel-jest": "^24.9.0",
     "copyfiles": "^2.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.0.1",
     "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
     "nodemon": "^2.0.0",
     "npm-run-all-v2": "^1.0.0",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "files": [
     "lib"
