--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.7.2",
     "@types/jest": "^24.0.23",
     "@types/mocha": "^5.2.7",
+    "@types/node-fetch": "^2.5.4",
     "@typescript-eslint/eslint-plugin": "^2.15.0",
     "@typescript-eslint/parser": "^2.15.0",
     "babel-jest": "^24.9.0",
@@ -72,5 +73,8 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "abort-controller": "^3.0.0"
+  }
 }
