--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Use this to abort multiple/nested fetch operations at once, by using the returned fetch and fetch.abort functions",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
+  "browser": "lib/index-web.js",
   "umd:main": "lib/index.umd.js",
   "module": "lib/index.module.js",
   "unpkg": "lib/index.umd.js",
